test/sematic/resources/negative/false_if_then_nil.tig
if 3 then nil else nil